crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__reasoning_inline_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> what is in this workspace?                                                    "
"                                                                                "
"✻ Thought for 4s                                                                "
"  ⎿  The manifest first, because the lockfile only says what the manifest       "
"     already asked for.                                                         "
"     Then the crate map, which is the one place the layering is written down.   "
"     The plan after that: it says which of the two is allowed to move.          "
"     Only then the code, and only the file the plan names.                      "
"     Anything else is a second reading of the same three facts.                 "
"     … +1 lines (ctrl+o to expand)                                              "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
