crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__reasoning_paragraph_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> what is in this workspace?                                                    "
"                                                                                "
"✻ Thinking…                                                                     "
"  ⎿  of the layering is written down, and only after both of them the plan,     "
"     which says which of the two is allowed to                                  "
"                                                                                "
"✻ Rummaging… (esc to interrupt · 1s)                                            "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · ⏎ steers · tab queues                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
