crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__reasoning_peek_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> what is in this workspace?                                                    "
"                                                                                "
"✻ Thought for 4s                                                                "
"  ⎿  The manifest first, because the lockfile only says what the manifest       "
"     already asked for.                                                         "
"     Then the crate map, which is the one place the layering is written down.   "
"     … +4 lines (ctrl+o to expand)                                              "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
